add default prometheus metrics
